[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/comet/comet.gd" type="Script" id=1]
[ext_resource path="res://objects/spike/explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/juiceness/score_pop.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/comet/sprite.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 56.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 32.0

[node name="comet" type="KinematicBody2D" groups=[
"comet",
]]

z_index = 2
input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable", "Transform", "Z Index" ]
explosion = ExtResource( 2 )
score = ExtResource( 3 )
speed = 300.0

[node name="sprite" parent="." index="0" instance=ExtResource( 4 )]

position = Vector2( 2, -0.999999 )
z_index = 0
_sections_unfolded = [ "Z Index" ]

[node name="shape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
disabled = true

[node name="mouse_area" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="mouse_area" index="0"]

shape = SubResource( 2 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="." index="3"]

scale = Vector2( 3.2, 3.2 )
rect = Rect2( -10, -10, 20, 20 )

[node name="collision_area" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="collision_area" index="0"]

shape = SubResource( 3 )

[connection signal="mouse_entered" from="mouse_area" to="." method="_on_mouse_area_mouse_entered"]

[connection signal="mouse_exited" from="mouse_area" to="." method="_on_mouse_area_mouse_exited"]

[connection signal="screen_exited" from="visibility_notifier_2d" to="." method="_on_screen_exited"]

[connection signal="area_entered" from="collision_area" to="." method="_on_collision_area_area_entered"]

[connection signal="body_entered" from="collision_area" to="." method="_on_collision_area_body_entered"]


